Posant chat al S/C
despres de posarlo modificare els inputs y la finestra per poder jugar y tindrem el S/C fet

--- a/GameLib/GameLib.vcxproj
+++ b/GameLib/GameLib.vcxproj
@@ -130,8 +130,10 @@
   <ItemGroup>
     <ClInclude Include="Direction.h" />
     <ClInclude Include="Direction.hpp" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="Map.hpp" />
     <ClInclude Include="Player.hpp" />
+    <ClInclude Include="Receptor.h" />
     <ClInclude Include="Renderer.hpp" />
     <ClInclude Include="Utils.hpp" />
   </ItemGroup>
