--- a/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="Utils.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Receptor.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Game.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
