--- a/GameLib/GameLib.vcxproj.filters
+++ b/GameLib/GameLib.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Button.hpp">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="GameP2P.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
